conformance/tests/listenerset-not-allowed.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-does-not-allow-listenerset
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: example-com
    port: 80
    protocol: HTTP
    hostname: "example.com"
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.x-k8s.io/v1alpha1
kind: XListenerSet
metadata:
  name: listenerset-not-allowed
  namespace: gateway-conformance-infra
spec:
  parentRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: gateway-does-not-allow-listenerset
    namespace: gateway-conformance-infra
  listeners:
  - name: foo-com
    port: 80
    protocol: HTTP
    hostname: "foo.com"
    allowedRoutes:
      namespaces:
        from: All
  - name: bar-com
    port: 80
    protocol: HTTP
    hostname: "bar.com"
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: attaches-to-all-listeners
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gateway-does-not-allow-listenerset
    namespace: gateway-conformance-infra
  - kind: XListenerSet
    group: gateway.networking.x-k8s.io
    name: listenerset-not-allowed
    namespace: gateway-conformance-infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /route
    backendRefs:
    - name: infra-backend-v1
      port: 8080
